--- a/package.json
+++ b/package.json
@@ -24,20 +24,31 @@
     ]
   },
   "dependencies": {
+    /* angular2 */
+    "angular2": "^2.0.0-beta.17",
+    "es6-shim": "^0.35.1",
+    "rxjs": "^5.0.0-beta.11",
+    "reflect-metadata": "^0.1.8",
+    "zone.js": "^0.6.15",
+    /* babel */
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.13.2",
+    /* auth */
+    "passport": "^0.3.2",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.15.2",
+    /* node */
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "mongoose": "^4.5.9",
-    "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.7.0",
     "nodemon": "^1.10.2",
-    "passport": "^0.3.2",
+    "body-parser": "^1.15.2",
+    /* mongo */
+    "mongoose": "^4.5.9",
+    "mongoose-auto-increment": "^5.0.1",
+    /* module bunder */     
     "webpack": "^1.13.2"
   }
 }
