--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "passport": "^0.3.2",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-beta.11",
+    "stripe": "^4.9.0",
     "webpack": "^1.13.2",
     "zone.js": "^0.6.15"
   }
