--- a/server/config/dev.env
+++ b/server/config/dev.env
@@ -3,3 +3,6 @@ APP_NAME=maderight
 PROTOCOL=http://
 HOST=localhost
 PORT=27017
+SESSION_SECRET=CHANGEMEASAP
+STRIPE_PUBLISHABLE_KEY=pk_test_aX50Tpw2s0GNLEyblwZKgQhe
+STRIPE_SECRET_KEY=sk_test_vt8JXJxFVRtfdvmmjrluD2Cc
