--- a/package.json
+++ b/package.json
@@ -30,17 +30,19 @@
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.13.2",
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt-nodejs": "latest",
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "es6-shim": "^0.35.1",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "mongodb": "^2.2.7",
     "mongoose": "^4.5.9",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.7.0",
     "nodemon": "^1.10.2",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-beta.11",
     "stripe": "^4.9.0",
